# pycddlib

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  INSTALL  INSTALL.rst  LICENSE.rst  MANIFEST.in  README  README.rst  appveyor.yml  build-fedora-python2.sh  build-fedora-python3.sh  build-fedora.sh  build.sh  cdd.pxi  cdd.pyx  cddflt.pyx  cddgmp.pyx  cddlib-makefile-gmp.ps1  cddlib-makefile-gmp.sh  cddlib.pxi  cddlib.pxi.in  cddlib.pyx  cddlib_classes.pxi  cddmpq.pyx  extern_cddlib.pxi  extern_cddlib.pxi.in  extern_myfloat.pxi  extern_mytype.pxi  extern_mytype_double.pxi  extern_mytype_flt.pxi  extern_mytype_gmp.pxi  extern_mytype_mpq.pxi  extern_preamble.pxi  mypy.ini  (+6 more)
.github/workflows/: build.yml  python-package.yml
cdd/: __init__.py  _common.pxd  _common.pyx  _constants.pxd  _constants.pyx  _core.pyx  _float.pxd  _fraction.pxd  _fraction.pyx  cddlib.pxd  cddlib.pyx
cython/: _cdd.pyx  _cddgmp.pyx  all.pxi  cdd.pxi  cddlib.pxi  enums.pxi  mytype.pxi  mytype_gmp.pxi  pycddlib.pxi  pyenums.pxi  setoper.pxi
doc/: Makefile  conf.py  constants.rst  index.rst  linprog.rst  make.bat  matrix.rst  polyhedra.rst
docs/: Makefile  cdd.rst  changes.rst  conf.py  constants.rst  index.rst  introduction.rst  linprog.rst  make.bat  matrix.rst  numbertype.rst  polyhedron.rst  quickstart.rst
docs/source/: .gitignore  cdd.rst  cddgmp.rst  changes.rst  conf.py  examples.rst  index.rst  license.rst  linprog.rst  matrix.rst  polyhedron.rst  quickstart.rst
src/: cdd.pyx  extern_cddlib.pxi
src/cdd/: __init__.py  __init__.pyi  _cdd.pyx  _cddgmp.pyx  cddlib.pxi  extern_cddlib.pxi  extern_mytype_gmp.pxi  gmp.py  gmp.pyi
test/: __init__.py  test_adjacency.py  test_adjacency_list.py  test_block_elimination.py  test_enums.py  test_fourier_elimination.py  test_incidence.py  test_issue20.py  test_issue25.py  test_issue35.py  test_issue35_2.py  test_issue35_3.py  test_issue7.py  test_large_file.py  test_large_number.py  test_linprog.py  test_matrix.py  test_matrix_canonicalize.py  test_matrix_rank.py  test_numbertype.py  test_pickle.py  test_polyhedron.py  test_redundant.py  test_set_poly_reptype.py
test/gmp/: __init__.py  test_enums.py  test_gmpy2.py  test_large_number.py  test_matrix.py  test_numpy.py
tests/: test_numbertype.py
