[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pycddlib"
version = "3.0.0"
requires-python = ">=3.9"
authors = [
  {name = "Matthias C. M. Troffaes", email = "matthias.troffaes@gmail.com"},
]
description = "A Python wrapper for cddlib"
readme = "README.rst"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
keywords = ["convex, polyhedron, linear programming, double description method"]

[project.optional-dependencies]
test = [
  "pytest",
  "numpy",
  "mypy",
  "black",
  "isort",
  "flake8",
]
doc = [
  "sphinx",
]

[project.urls]
Homepage = "https://github.com/mcmtroffaes/pycddlib"
Documentation = "https://pycddlib.readthedocs.io/"
Repository = "https://github.com/mcmtroffaes/pycddlib.git"
Issues = "https://github.com/mcmtroffaes/pycddlib/issues"
Changelog = "https://github.com/mcmtroffaes/pycddlib/blob/develop/CHANGELOG.rst"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdd = ["py.typed"]

[tool.mypy]
files = ["src/**/*.pyi", "test/**/*.py", "docs/**/*.py"]
disallow_untyped_defs = true
